issue #103 JSE 1.4 compatability fix